Remove $watch and instead use ng-change. This cleans up the controller.

--- a/website/app/application/core/projects/project/provenance/wizard/display-template.html
+++ b/website/app/application/core/projects/project/provenance/wizard/display-template.html
@@ -7,6 +7,7 @@
             <div class="checkbox checkbox-inline checkbox-primary"
                  style="margin-top: 0px">
                 <input type="checkbox"
+                       ng-change="templateChosen()"
                        ng-model="useTemplate" id="{{template.id}}">
                 <label for="{{template.id}}"></label>
             </div>
