Select a node by default. Select the node that is added. Add onLoaded so we can get at the visjs network. Code is a complete mess.

--- a/website/app/application/core/projects/project/provenance/wizard/wizard.html
+++ b/website/app/application/core/projects/project/provenance/wizard/wizard.html
@@ -17,7 +17,7 @@
                         Hide <i class="fa fa-fw fa-chevron-left"></i>
                     </a>
                     <div style="border: 1px solid black; margin-top: 4px">
-                        <vis-network ng-model="data" on-select="onSelect" options="options"></vis-network>
+                        <vis-network ng-model="data" on-select="onSelect" options="options" on-loaded="onLoaded"></vis-network>
                     </div>
                 </div>
 
