--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,57 +1,71 @@
 <div class="row"><br>
-    <h4>Files</h4>
 
-    <div class="col-xs-6">
-        <div class="row" class="form-group has-feedback">
-            <input style="padding-left: 25px;" ng-model="searchInput" placeholder="Search Files..."
-                   class="form-control">
-            <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
+    <div class="row">
+        <div class="col-xs-3">
+            <button class="btn btn-info">Select</button>
         </div>
-        <div class="row">
-            <div style="border: 1px solid #000000;" class="panel-body home-panel-body no-max-height">
-                <file-upload-panel></file-upload-panel>
-                <mc-tree items="files"
-                         matches="matchingFiles"
-                         orderby="'name'">
-                </mc-tree>
+        <div class="col-xs-4 pull-right">
+            <div class="form-group has-feedback">
+                <input style="padding-left: 35px;" ng-model="searchInput" placeholder="Search Files..."
+                       class="form-control">
+                <span style="left: 0;padding-left: 10px;" class="fa fa-fw fa-search form-control-feedback"></span>
             </div>
-
         </div>
     </div>
-    <h4>{{activeFile.name}}</h4>
-
-    <div ng-show="activeFile" class="col-xs-6">
-        <div class="panel-body alternative_cls text-center">
-            <div ng-switch="fileType">
-                <div ng-switch-when="image">
-                    <img style="width:300px;" class="img-responsive center-block"
-                         ng-src="{{fileSrc(activeFile)}}">
-                </div>
-                <div ng-switch-when="pdf">
-                    <div class="embed-responsive embed-responsive-4by3">
-                        <embed class="col-xs-8 embed-responsive-item"
-                               ng-src="{{fileSrc(activeFile)}}">
-                        </embed>
-                    </div>
-                </div>
-                <div ng-switch-default>
-                    <div ng-if="activeFile.size <= 10000"
-                         include="fileSrc(activeFile)">
-                    </div>
-                    <code ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
-                          style="white-space:pre-line" ng-include="fileSrc(activeFile)">
-                    </code>
-
-                    <div ng-if="activeFile.size > 2000000">File too big to display</div>
+    <div class="row" style="border: 1px solid #757575; height: 600px;">
+        <div class="col-xs-5" style="margin-left: -10px;">
+            <div class="row"
+                 style="padding: 10px; height:50px; background-color: #EFEFEF;border-bottom: 1px solid #d3d3d3;border-right: 1px solid #d3d3d3">
+                <h4>Tree</h4>
+            </div>
+            <div class="row">
+                <div class="sidebar-wrapper">
+                    <file-upload-panel></file-upload-panel>
+                    <mc-tree items="files"
+                             matches="matchingFiles"
+                             orderby="'name'">
+                    </mc-tree>
                 </div>
             </div>
         </div>
-        <div class="panel-body alternative_cls">
-            <b>Notes</b>
+        <div class="col-xs-7" ng-show="activeFile"><br>
+
+            <div class="row">
+                <div class="col-xs-4"><h4>{{activeFile.name}}</h4></div>
+                <div class="col-xs-1 pull-right"><a>Image</a></div>
+                <div class="col-xs-1 pull-right"><a>Tags</a></div>
+                <div class="col-xs-1 pull-right"><a>Notes</a></div>
+            </div>
+            <hr/>
+
+            <div>
+                <div class="panel-body">
+                    <div ng-switch="fileType">
+                        <div ng-switch-when="image">
+                            <img class="img-responsive center-block"
+                                 ng-src="{{fileSrc(activeFile)}}">
+                        </div>
+                        <div ng-switch-when="pdf">
+                            <div class="embed-responsive embed-responsive-4by3">
+                                <embed class="col-xs-8 embed-responsive-item"
+                                       ng-src="{{fileSrc(activeFile)}}">
+                                </embed>
+                            </div>
+                        </div>
+                        <div ng-switch-default>
+                            <div ng-if="activeFile.size <= 10000"
+                                 include="fileSrc(activeFile)">
+                            </div>
+                            <code ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
+                                  style="white-space:pre-line" ng-include="fileSrc(activeFile)">
+                            </code>
+
+                            <div ng-if="activeFile.size > 2000000">File too big to display</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="panel-body alternative_cls">
-            <b>Tags</b>
-        </div>
     </div>
 </div>
