files page updates

--- a/website/app/application/directives/mc-tree-display-item.html
+++ b/website/app/application/directives/mc-tree-display-item.html
@@ -9,7 +9,7 @@
             </div>
 
             <div ng-if="item.type === 'datafile'">
-                <mc-tree-leaf item="item"></mc-tree-leaf>
+                <!--<mc-tree-leaf item="item"></mc-tree-leaf>-->
             </div>
         </div>
     </div>
