--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -28,44 +28,84 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-7" ng-show="activeFile"><br>
+        <div class="col-xs-7" ng-show="activeFile" style="overflow-y: auto;height:550px;"><br>
 
             <div class="row">
-                <div class="col-xs-4"><h4>{{activeFile.name}}</h4></div>
-                <div class="col-xs-1 pull-right"><a>Image</a></div>
-                <div class="col-xs-1 pull-right"><a>Tags</a></div>
-                <div class="col-xs-1 pull-right"><a>Notes</a></div>
+                <div class="col-xs-4"><h4><i class="fa fa-fw fa-file fa-1x"></i>{{activeFile.name}}</h4></div>
+                <div class="col-xs-1 fa fa-fw fa-close fa-1x pull-right"></div>
             </div>
-            <hr/>
-
-            <div>
-                <div class="panel-body">
-                    <div ng-switch="fileType">
-                        <div ng-switch-when="image">
-                            <img class="img-responsive center-block"
-                                 ng-src="{{fileSrc(activeFile)}}">
-                        </div>
-                        <div ng-switch-when="pdf">
-                            <div class="embed-responsive embed-responsive-4by3">
-                                <embed class="col-xs-8 embed-responsive-item"
-                                       ng-src="{{fileSrc(activeFile)}}">
-                                </embed>
+            <div class="row" style="border-top: 1px solid #d3d3d3;">
+                <div ng-click="showContent('details')" ng-class="{'file-details': bk.content === 'details'}"
+                     class="col-xs-6"><a>Details</a>
+                </div>
+                <div ng-click="showContent('activity')" ng-class="{'file-details': bk.content === 'activity'}"
+                     class="col-xs-6"><a>Activity</a></div>
+            </div>
+            <div ng-if="bk.content === 'details'">
+                <div>
+                    <div class="panel-body">
+                        <div ng-switch="fileType">
+                            <div ng-switch-when="image">
+                                <img style="width: 100%; height: 300px;" class="img-responsive center-block"
+                                     ng-src="{{fileSrc(activeFile)}}">
                             </div>
-                        </div>
-                        <div ng-switch-default>
-                            <div ng-if="activeFile.size <= 10000"
-                                 include="fileSrc(activeFile)">
+                            <div ng-switch-when="pdf">
+                                <div class="embed-responsive embed-responsive-4by3">
+                                    <embed style="width: 100%; height: 300px;" class="col-xs-8 embed-responsive-item"
+                                           ng-src="{{fileSrc(activeFile)}}">
+                                    </embed>
+                                </div>
                             </div>
-                            <code ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
-                                  style="white-space:pre-line" ng-include="fileSrc(activeFile)">
-                            </code>
+                            <div ng-switch-default>
+                                <div ng-if="activeFile.size <= 10000"
+                                     hljs include="fileSrc(activeFile)">
+                                </div>
+                                <code
+                                        ng-if="activeFile.size > 10000 && activeFile.size <= 2000000"
+                                        style="white-space:pre-line" ng-include="fileSrc(activeFile)">
+                                </code>
 
-                            <div ng-if="activeFile.size > 2000000">File too big to display</div>
+                                <div ng-if="activeFile.size > 2000000">File too big to display</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+                <hr/>
+                <div class="row" style="padding: 10px;">
+                    <b><i class="fa fa-fw fa-lock fa-2x"></i> </b> Not shared
+                </div>
+                <hr/>
+                <div class="row" style="padding: 10px;">
+                    Add a Note ...<span class="pull-right"><i class="fa fa-fw fa-edit"></i></span>
+                </div>
+                <hr/>
+                <div class="row" style="padding: 10px;">
+                    <div class="col-xs-2"> Media Type:</div>
+                    <div class="col-xs-2">{{activeFile.mediatype}}</div>
+                    <br>
 
+                    <div class="col-xs-2"> Owner:</div>
+                    <div class="col-xs-2">{{activeFile.owner}}</div>
+                    <br>
+
+                    <div class="col-xs-2"> Created:</div>
+                    <div class="col-xs-2">{{activeFile.birthtime | toDateString}}</div>
+                    <br>
+                </div>
+                <hr/>
+                <div class="row" style="padding: 10px;">
+                    <b> <i class="fa f-fw fa-tags fa-2x"></i></b> Tags :<span class="pull-right"><i
+                        class="fa fa-fw fa-edit"></i></span>
+                </div>
+                <hr/>
+            </div>
+            <div ng-if="bk.content === 'activity'">
+                Activity Log here...
+            </div>
+
+        </div>
     </div>
+</div>
+
+</div>
 </div>
