--- a/website/app/application/directives/mc-tree-display-item.html
+++ b/website/app/application/directives/mc-tree-display-item.html
@@ -1,6 +1,6 @@
 <div>
     <mc-tree-header item="item"
-                    show-sideboard="showSideboard">
+                    show-sideboard="showSideboard" check-box="checkBox">
     </mc-tree-header>
     <div ng-if="item.showDetails">
         <div class="row">
