--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -16,30 +16,30 @@
                 <div class="col-xs-2">
                     <button class="btn btn-info" ng-click="showCheckBox = !showCheckBox">Select</button>
                 </div>
-                <div class="col-xs-8">
-                    <ul class="nav nav-pills">
-                        <li role="presentation"><a
-                                ng-click="toggleExpanded('access')"
-                                title="Add sub folder">
-                            <i class="fa fa-fw fa-plus fa-1x"></i>
-                        </a></li>
-                        <li role="presentation"><a
-                                ng-click="toggleExpanded('access')"
-                                title="Add sub folder">
-                            <i class="fa fa-fw fa-upload fa-1x"></i>
-                        </a></li>
-                        <li role="presentation"><a
-                                ng-click="toggleExpanded('access')"
-                                title="Add sub folder">
-                            <i class="fa fa-fw fa-download fa-1x"></i>
-                        </a></li>
-                        <li role="presentation"><a
-                                ng-click="toggleExpanded('access')"
-                                title="Add sub folder">
-                            <i class="fa fa-fw fa-clipboard"></i>
-                        </a></li>
-                    </ul>
-                </div>
+                <!--<div class="col-xs-8">-->
+                    <!--<ul class="nav nav-pills">-->
+                        <!--<li role="presentation"><a-->
+                                <!--ng-click="toggleExpanded('access')"-->
+                                <!--title="Add sub folder">-->
+                            <!--<i class="fa fa-fw fa-plus fa-1x"></i>-->
+                        <!--</a></li>-->
+                        <!--<li role="presentation"><a-->
+                                <!--ng-click="toggleExpanded('access')"-->
+                                <!--title="Add sub folder">-->
+                            <!--<i class="fa fa-fw fa-upload fa-1x"></i>-->
+                        <!--</a></li>-->
+                        <!--<li role="presentation"><a-->
+                                <!--ng-click="toggleExpanded('access')"-->
+                                <!--title="Add sub folder">-->
+                            <!--<i class="fa fa-fw fa-download fa-1x"></i>-->
+                        <!--</a></li>-->
+                        <!--<li role="presentation"><a-->
+                                <!--ng-click="toggleExpanded('access')"-->
+                                <!--title="Add sub folder">-->
+                            <!--<i class="fa fa-fw fa-clipboard"></i>-->
+                        <!--</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
             </div>
             <div class="row">
                 <div class="sidebar-wrapper">
@@ -56,6 +56,12 @@
 
             <div class="row">
                 <div class="col-xs-4"><h4><i class="fa fa-fw fa-file fa-1x"></i>{{activeFile.name}}</h4></div>
+                <div class="col-xs-2">
+                    <a ng-click="toggleExpanded('access')"
+                            title="Add sub folder">
+                        <i class="fa fa-fw fa-download fa-1x"></i>
+                    </a>
+                </div>
                 <div class="col-xs-1 fa fa-fw fa-close fa-1x pull-right"></div>
             </div>
             <div class="row" style="border-top: 1px solid #d3d3d3;">
