Add notes from datafile page functionality - in process

--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -29,7 +29,7 @@
     <div class="panel-body home-panel-body">
         <ul class="list-unstyled">
             <li style="padding-top:10px;" ng-show="model.createNote">
-                <create-note model="model"></create-note>
+                <create-note item-type="project" ></create-note>
             </li>
             <li class="home-item"
                 ng-class="{'open-item-details': showDetails($index)}"
