--- a/website/app/application/core/projects/project/notes/create.html
+++ b/website/app/application/core/projects/project/notes/create.html
@@ -3,7 +3,7 @@
         <div class="form-group">
             <label class="control-label col-xs-2">Title:</label>
             <div class="col-xs-4">
-                <input class="form-control" ng-model="model.title">
+                <input class="form-control" ng-model="noteModel.title">
             </div>
         </div>
         <div class="form-group">
@@ -12,7 +12,7 @@
                 <text-angular ta-toolbar="[['h2','h5', 'h6','quote'],
                               ['bold','italics','underline'],
                               ['justifyLeft','justifyCenter','justifyRight'], ['insertLink', 'insertImage']]"
-                              ng-model="model.note">
+                              ng-model="noteModel.note">
                 </text-angular>
             </div>
         </div>
