--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -1,4 +1,5 @@
 <div class="row"><br>
+
     <div class="row">
         <div class="col-xs-4 pull-right">
             <div class="form-group has-feedback">
@@ -24,6 +25,7 @@
             </div>
         </div>
         <div class="col-xs-9" ng-if="activeFile" style="overflow-y: auto;height:550px;"><br>
+
             <div class="row">
                 <div class="col-xs-4">
                     <h4><i class="fa fa-fw fa-file fa-1x"></i>
@@ -77,7 +79,13 @@
                         </div>
                         <hr/>
                         <div class="row" style="padding: 10px;">
-                            Add a Note ...<span class="pull-right"><i class="fa fa-fw fa-edit"></i></span>
+                            <span ng-show="editNote"> Add a Note ...</span> <span class="pull-right">
+                            <a ng-click="editNote = !editNote"><i class="fa fa-fw fa-edit"></i></a></span>
+                        </div>
+                        <div class="row" ng-show="!editNote">
+                            <create-note item-type="datafile" item="activeFile"></create-note>
+                            <!--<textarea class="form-control" ng-model="activeFile.note" placeholder="Edit here..."></textarea>-->
+                            <!--<button ng-click="saveNote()" class="btn btn-success btn-xs">Save</button>-->
                         </div>
                         <hr/>
                         <div class="row" style="padding: 10px;">
