--- a/website/app/application/core/projects/project/notes/create.html
+++ b/website/app/application/core/projects/project/notes/create.html
@@ -1,4 +1,4 @@
-<div class="info-box">
+<!--<div class="info-box">-->
     <form name="Form" class="form-horizontal">
         <div class="form-group">
             <label class="control-label col-xs-2">Title:</label>
@@ -18,11 +18,11 @@
         </div>
         <div class="form-group">
             <label class="control-label col-xs-2"></label>
-            <button validation-submit="Form" ng-click="create()"
+            <button validation-submit="Form" ng-click="save()"
                     class="btn btn-xs btn-mini btn-primary">
-                Create
+                Save
             </button>
             <button class="btn btn-xs btn-mini btn-danger" ng-click="cancel()">Cancel</button>
         </div>
     </form>
-</div>
+<!--</div>-->
