--- a/website/app/index.html
+++ b/website/app/index.html
@@ -31,6 +31,7 @@
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
     <link href="assets/css/nsPopover.css" rel="stylesheet">
     <link href="assets/css/handsontable.full.css" rel="stylesheet">
+    <link href="assets/css/ng-tags-input.css" rel="stylesheet">
     <!-- Application style sheet -->
     <link href="style-3.css" rel="stylesheet">
     <!-- endbuild -->
@@ -142,6 +143,7 @@
 <script src="assets/js/angular/angular-recursion.min.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation.js"></script>
 <script src="bower_components/angular-validation/dist/angular-validation-rule.js"></script>
+<script src="assets/js/ng-tags-input.js"></script>
 <!-- endbuild -->
 
 <!-- build:appjs js/app.js -->
@@ -190,7 +192,6 @@
 <script src="application/core/projects/project/home/directives/home-processes.js"></script>
 <script src="application/core/projects/project/home/directives/home-notes-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-tasks-directive.js"></script>
-<script src="application/core/projects/project/home/directives/home-tags-directive.js"></script>
 <script src="application/core/projects/project/home/directives/home-note-details.js"></script>
 <script src="application/core/projects/project/home/directives/home-review-details.js"></script>
 <script src="application/core/projects/project/home/directives/home-process-details.js"></script>
